--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+APP_TIMEZONE=America/Sao_Paulo
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
@@ -20,12 +21,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=sqlsrv
+ DB_HOST= #URL DO DB SOMEE
+ DB_PORT=1433
+ DB_DATABASE= #NOME DB DO SOMEE
+ DB_USERNAME= #USERNAME DO SOMEE
+ DB_PASSWORD= #PASSWORD DO SOMEE
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
